[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qunex"
version = "0.1.0"
description = "Simulating tool for entanglement distribution in quantum networks"
authors = [
    { name = "Md Sohel Mondal" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "networkx"
]

[project.urls]
Homepage = "https://github.com/mdsohelmondal/QuNeX-Quantum-Network-eXplorer"